--- a/es/doc/rules/bugprone.tex
+++ b/es/doc/rules/bugprone.tex
@@ -12,7 +12,7 @@ función 4 o más parámetros del mismo tipo.
 
 \item \cppid{bugprone-implicit-widening-of-multiplication-result}: Se deberá
 realizar un \cppkey{static\_cast<>} para realizar la conversión a un tipo
-de mayor tamaño. Si fuse necesario se incluirá el archivo de cabecera 
+de mayor tamaño. Si fuese necesario se incluirá el archivo de cabecera 
 \cppid{<cstddef>}.
 
 \item \cppid{bugprone-misplaced-widening-cast}: Se tendrán en cuenta las
