--- a/es/doc/rules/general.tex
+++ b/es/doc/rules/general.tex
@@ -16,7 +16,7 @@ formateadas.
 \item Todos los parámetros se pasarán a las funciones por valor, por referencia
 o por referencia constante.
 
-\item No se podrá usar explicitamente las funciones \cppid{malloc()}
+\item No se podrá usar explícitamente las funciones \cppid{malloc()}
 o \cppid{free()} ni los operadores \cppkey{new} o \cppkey{delete}.
 
 \item No se permite el uso de macros, excepto para la definición de guardas de inclusión.
