--- a/es/doc/rules/misc.tex
+++ b/es/doc/rules/misc.tex
@@ -15,7 +15,7 @@ opciones:
 \begin{itemize}
 
 \item \cppid{misc-non-private-member-variables-in-classes}:
-Se require que los datos miembros sean privados a menos que se trate de
+Se requiere que los datos miembros sean privados a menos que se trate de
 una estructura con todos los miembros públicos.
 
 \end{itemize}
