--- a/es/doc/rules/readability.tex
+++ b/es/doc/rules/readability.tex
@@ -15,13 +15,13 @@ opciones:
 \begin{itemize}
 
 \item \cppid{readability-function-cognitive-complexity}:
-La complejidad congnitiva máxima será de \cppid{50}.
+La complejidad cognitiva máxima será de \cppid{50}.
 
 \item \cppid{readability-function-size}:
 El número máximo de líneas por función será de \cppid{25}.
 
 \item \cppid{readability-function-size}:
-El número máximo de parámetros por función será de \cppid{50}.
+El número máximo de parámetros por función será de \cppid{4}.
 
 \item \cppid{readability-identifier-length}:
 La longitud mínima de los identificadores para parámetros de función será \cppid{1}.
