--- a/es/doc/format.tex
+++ b/es/doc/format.tex
@@ -3,13 +3,13 @@
 Como norma general, el código debe estar bien estructurado y organizado, así
 como apropiadamente documentado.
 
-Para garantizar la legilibilidad del código y un formato homogéneo, se
+Para garantizar la legibilidad del código y un formato homogéneo, se
 formateará todo el código mediante \textgood{clang-format}. Se utilizará una
 configuración común como la que se describe a continuación:
 
 \lstinputlisting{int/.clang-format}
 
-Para dar formato al código funete puede situar el archivo
+Para dar formato al código fuente puede situar el archivo
 \textemph{.clang-format} en el directorio raíz de su proyecto. La mayoría de los
 entornos de desarrollo reconocerán el archivo y darán formato al código
 automáticamente.
