Revised general rules

--- a/en/doc/rules/general.tex
+++ b/en/doc/rules/general.tex
@@ -6,7 +6,8 @@ In general, the following principles must be considered:
 
 \item No global variables shall be used except constants.
 
-\item No array shall be passed to a function as a pointer parameter.
+\item No primitive array (C-type array) shall be passed to 
+a function as a pointer parameter.
 
 \item No function or member function shall have more than 4 parameters.
 
