--- a/es/doc/rules/general.tex
+++ b/es/doc/rules/general.tex
@@ -6,7 +6,8 @@ En general se cumplirán los siguientes principios:
 
 \item No se podrán utilizar variables globales que no sean constantes.
 
-\item No se podrá pasar arrays a una función como parámetros de tipo puntero.
+\item No se podrá pasar arrays primitivos (arrays tipo C)
+a una función como parámetros de tipo puntero.
 
 \item Ninguna función ni función miembro podrá tener más de cuatro parámetros.
 
