General review of rules

--- a/es/doc/rules/bugprone.tex
+++ b/es/doc/rules/bugprone.tex
@@ -9,7 +9,7 @@ opciones:
 
 \item \cppid{bugprone-assert-side-effect}:
 Se evitarán efectos laterales en evaluación de aserciones con \cppid{assert}.
-También se evitarán efectos laterales con las aserciones de \textmark{GLS} 
+También se evitarán efectos laterales con las aserciones de \textmark{GSL} 
 \cppid{Expects} y \cppid{Ensures}.
 
 \item \cppid{bugprone-assignment-in-if-condition}:
