--- a/es/doc/rules/general.tex
+++ b/es/doc/rules/general.tex
@@ -9,9 +9,9 @@ En general se cumplirán los siguientes principios:
 \item No se podrá pasar arrays primitivos (arrays tipo C)
 a una función como parámetros de tipo puntero.
 
-\item Ninguna función ni función miembro podrá tener más de cuatro parámetros.
+\item Ninguna función ni función miembro podrá tener más de \cppid{4} parámetros.
 
-\item Ninguna función podrá tener más de 25 líneas estando apropiadamente
+\item Ninguna función podrá tener más de \cppid{40} líneas estando apropiadamente
 formateadas.
 
 \item Todos los parámetros se pasarán a las funciones por valor, por referencia
