--- a/es/doc/rules.tex
+++ b/es/doc/rules.tex
@@ -1,3 +1,4 @@
+\clearpage
 \section{Reglas de codificación}
 
 Como regla general, se recomienda tener en cuenta las \textmark{C++ Core
@@ -33,3 +34,5 @@ A continuación se especifican un conjunto de reglas que si deben cumplirse.
 \input{es/doc/rules/cert}
 \input{es/doc/rules/misc}
 \input{es/doc/rules/performance}
+
+\input{es/doc/rules/nolint}
