--- a/en/doc/rules.tex
+++ b/en/doc/rules.tex
@@ -25,10 +25,13 @@ You can also use other ways to apply the checks that can be found at
 Below you will find a set of rules that must be followed.
 
 \input{en/doc/rules/general}
+
+\input{en/doc/rules/cppcoreguidelines}
+\input{en/doc/rules/modernize}
+\input{en/doc/rules/readability}
 \input{en/doc/rules/bugprone}
 \input{en/doc/rules/cert}
-\input{en/doc/rules/cppcoreguidelines}
-\input{en/doc/rules/misc}
-\input{en/doc/rules/modernize}
 \input{en/doc/rules/performance}
-\input{en/doc/rules/readability}
+\input{en/doc/rules/misc}
+
+\input{en/doc/rules/nolint}
