--- a/es/doc/rules/general.tex
+++ b/es/doc/rules/general.tex
@@ -22,8 +22,7 @@ o \cppid{free()} ni los operadores \cppkey{new} o \cppkey{delete}.
 
 \item No se permite el uso de macros, excepto para la definición de guardas de inclusión.
 
-\item No se permite ningún cast excepto \cppkey{static\_cast}, \cppkey{dynamic\_cast}
-\cppkey{const\_cast}.
+\item No se permite ningún cast excepto \cppkey{static\_cast} o \cppkey{dynamic\_cast}.
 
 \item Solamente se podrá usar \cppkey{reinterpret\_cast} en el paso de parámetros a funciones
 de la biblioteca estándar (p.ej \cppid{read()} o \cppid{write}).
