--- a/es/doc/rules/performance.tex
+++ b/es/doc/rules/performance.tex
@@ -2,6 +2,8 @@
 
 Todas estas reglas se encuentran bajo la categoría \cppid{performance}.
 
+A continuación se resumen las principales reglas aplicables.
+
 \begin{itemize}
 
 \item \cppid{performance-avoid-endl}:
