--- a/es/doc/rules/readability.tex
+++ b/es/doc/rules/readability.tex
@@ -2,8 +2,7 @@
 
 Todas estas reglas se encuentran bajo la categoría \cppid{readability}.
 
-Para las reglas de esta categoría, se tendrán en cuenta las siguientes
-opciones:
+A continuación se resumen las principales reglas aplicables.
 
 \begin{itemize}
 
@@ -32,6 +31,8 @@ El número máximo de parámetros por función será de \cppid{4}.
 
 \item \cppid{readability-identifier-length}:
 La longitud mínima de los identificadores será de 3 caracteres.
+Se establece una excepción para los contadores de bucle con nombres
+\cppid{i}, \cppid{j} o \cppid{k}.
 
 \item \cppid{readability-magic-numbers}:
 No se utilizarán \emph{números mágicos} en el código.
