--- a/es/doc/rules/bugprone.tex
+++ b/es/doc/rules/bugprone.tex
@@ -2,8 +2,7 @@
 
 Todas estas reglas se encuentran bajo la categoría \cppid{cppcoreguidelines}.
 
-Para las reglas de esta categoría, se tendrán en cuenta las siguientes
-opciones:
+A continuación se resumen las principales reglas aplicables.
 
 \begin{itemize}
 
@@ -21,16 +20,18 @@ No se realizarán conversiones implícitas de \cppkey{bool*} a \cppkey{bool}.
 \item \cppid{bugprone-casting-through-void}:
 No se realizarán conversiones que involucren \cppkey{void*}.
 
-\item \cppid{bugprone-easily-swappable-parameters}: No se podrá pasar a una
-función 4 o más parámetros del mismo tipo.
+\item \cppid{bugprone-easily-swappable-parameters}: 
+No se podrá pasar a una parámetros consecutivos del mismo tipo
+que pueda dar lugar a confusión.
 
-\item \cppid{bugprone-implicit-widening-of-multiplication-result}: Se deberá
+\item \cppid{bugprone-implicit-widening-of-multiplication-result}: 
+Se deberá
 realizar un \cppkey{static\_cast<>} para realizar la conversión a un tipo
 de mayor tamaño. Si fuese necesario se incluirá el archivo de cabecera 
 \cppid{<cstddef>}.
 
-\item \cppid{bugprone-misplaced-widening-cast}: Se tendrán en cuenta las
-conversiones implícitas.
+\item \cppid{bugprone-misplaced-widening-cast}: 
+Se evitarán las conversiones implícitas en las expresiones de cálculo.
 
 \item \cppid{bugprone-switch-missing-default-case}:
 Una sentencia \cppkey{switch} siempre tendrá una alternativa \cppkey{default}.
