--- a/es/doc/rules/modernize.tex
+++ b/es/doc/rules/modernize.tex
@@ -9,8 +9,7 @@ Todas estas reglas se encuentran bajo la categoría \cppid{modernize}.
 
 \end{itemize}
 
-Para las reglas de esta categoría, se tendrán en cuenta las siguientes
-opciones:
+A continuación se resumen las principales reglas aplicables.
 
 \begin{itemize}
 
