--- a/en/doc/rules/nolint.tex
+++ b/en/doc/rules/nolint.tex
@@ -48,7 +48,7 @@ void write_binary(std::ostream & output, std::int16_t const & value) {
 }
 \end{lstlisting} 
 
-\subsubsection{Código fuente de pruebas}
+\subsubsection{Test source code}
 
 In testing code, it is quite usual to use arbitrary values. In those cases, it
 is completely justified to disable rules that forbid the use of magic number for
