--- a/es/doc/rules/bugprone.tex
+++ b/es/doc/rules/bugprone.tex
@@ -1,8 +1,13 @@
 \subsection{Reglas para evitar errores comunes}
 
-Todas estas reglas se encuentran bajo la categoría \cppid{cppcoreguidelines}.
+Todas estas reglas se encuentran bajo la categoría \cppid{bugprone}.
+
+\subsubsection{Reglas aplicables}
 
 A continuación se resumen las principales reglas aplicables.
+Por favor, ten en cuenta que hay muchas más reglas de esta categoría que están 
+activadas. Si necesitas una explicación detallada sobre alguna de ellas,
+puedes consultar el manual de \cppkey{clang-tidy}.
 
 \begin{itemize}
 
@@ -11,29 +16,53 @@ Se evitarán efectos laterales en evaluación de aserciones con \cppid{assert}.
 También se evitarán efectos laterales con las aserciones de \textmark{GSL} 
 \cppid{Expects} y \cppid{Ensures}.
 
+Se utilizará la siguiente opción:
+\begin{lstlisting}
+bugprone-assert-side-effect.AssertMacros: 'assert,Expects,Ensures'
+\end{lstlisting}
+
 \item \cppid{bugprone-assignment-in-if-condition}:
 No se realizarán asignaciones dentro de las condiciones de sentencias \cppkey{if}.
-
-\item \cppid{bugprone-bool-pointer-implicit-conversion}:
-No se realizarán conversiones implícitas de \cppkey{bool*} a \cppkey{bool}.
 
 \item \cppid{bugprone-casting-through-void}:
 No se realizarán conversiones que involucren \cppkey{void*}.
 
+\item \cppid{bugprone-chained-comparison}:
+No se utilizarán comparaciones encadenadas que puedan ser confusas.
+
 \item \cppid{bugprone-easily-swappable-parameters}: 
-No se podrá pasar a una parámetros consecutivos del mismo tipo
+No se podrá pasar a una función parámetros consecutivos del mismo tipo
 que pueda dar lugar a confusión.
 
 \item \cppid{bugprone-implicit-widening-of-multiplication-result}: 
-Se deberá
-realizar un \cppkey{static\_cast<>} para realizar la conversión a un tipo
-de mayor tamaño. Si fuese necesario se incluirá el archivo de cabecera 
+Se deberá realizar un \cppkey{static\_cast<>} para realizar la conversión a un
+tipo de mayor tamaño. Si fuese necesario se incluirá el archivo de cabecera
 \cppid{<cstddef>}.
+
+Se utilizará la opción:
+\begin{lstlisting}
+bugprone-implicit-widening-of-multiplication-result.IgnoreConstantIntExpr: false
+\end{lstlisting}
 
 \item \cppid{bugprone-misplaced-widening-cast}: 
 Se evitarán las conversiones implícitas en las expresiones de cálculo.
 
+\item \cppid{bugprone-narrowing-conversions}:
+Se evitarán la conversiones estrechadoras que puedan dar lugar a pérdida
+de información.
+
 \item \cppid{bugprone-switch-missing-default-case}:
-Una sentencia \cppkey{switch} siempre tendrá una alternativa \cppkey{default}.
+Una sentencia \cppkey{switch} siempre tendrá una alternativa \cppkey{default},
+a menos que cubra todos los casos.
+
+\end{itemize}
+
+\subsubsection{Reglas excuidas}
+
+No son de aplicación las siguientes reglas:
+
+\begin{itemize}
+
+\item \cppid{bugprone-argument-comment}.
 
 \end{itemize}
